@@ -190,3 +190,6 @@
 	* Incremented the package version to 0.9.0.
 2018-10-21 Fred Gleason <fredg@paravelsystems.com>
 	* Modified the 'centos7/' setup to install Rivendell 3.x Beta.
+2018-10-22 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed regression in the 'centos7/' installation script when using
+	'--server' mode.
